attempt to fix clipping on mobile

--- a/sarasa/sarasa1.css
+++ b/sarasa/sarasa1.css
@@ -641,8 +641,7 @@ body::after{
     .speech-bubble {
         margin-bottom: calc(10rem - 5vw);
         margin-top: calc(10rem - 5vw);
-        max-width: 100%;;
-
+        max-width: calc(100% - 2px);
     }
     .speech-bubble:nth-of-type(2n+1) {
         margin-left: -.75rem;
@@ -650,5 +649,9 @@ body::after{
     .speech-bubble:nth-of-type(2) {
         margin-right: -.75rem;
     }
-
 }
+
+::spelling-error {
+    color: var(--red);
+    font-size: 2rem;
+  }
